[gd_scene load_steps=24 format=3 uid="uid://cruqmhkt7nq14"]

[ext_resource type="Script" path="res://Manager/UImanager.gd" id="1_ugyiy"]
[ext_resource type="Script" path="res://Scrips/Inventory/Inventory.gd" id="2_j2p56"]
[ext_resource type="Resource" uid="uid://c6o2wlw17mj42" path="res://Resource/InventoryDataRes.tres" id="3_81cup"]
[ext_resource type="Script" path="res://Scrips/Inventory/Slot.gd" id="4_ct14i"]
[ext_resource type="Texture2D" uid="uid://dus8ubkpmibnm" path="res://Art/UI/sqre_2_flat2.png" id="5_7ihpo"]
[ext_resource type="Script" path="res://Scene/UImanager/FadeInOut.gd" id="6_l6rhs"]
[ext_resource type="Texture2D" uid="uid://chu7f08kp47o5" path="res://Art/UI/crcl_2_flat_godot.png" id="6_w3rwr"]
[ext_resource type="Texture2D" uid="uid://d2xghx1n63c2f" path="res://Art/UI/crcl_2_wired_godt.png" id="7_8e58o"]
[ext_resource type="Texture2D" uid="uid://le7pr58u0mcw" path="res://Art/UI/crcl_1_flat.png" id="7_b1cg2"]
[ext_resource type="Script" path="res://Scrips/UI/ExitButton.gd" id="7_lh5y0"]
[ext_resource type="Texture2D" uid="uid://2mwgx62o1bqq" path="res://Art/MainMenu/Button (Exit).png" id="8_4wkpy"]
[ext_resource type="Texture2D" uid="uid://bkibv3mcna0wd" path="res://Art/UI/arrow_x_flat.png" id="9_qm21b"]
[ext_resource type="Texture2D" uid="uid://e054v3nul2c0" path="res://Art/UI/crcl_1_wired.png" id="9_s8fn7"]
[ext_resource type="Texture2D" uid="uid://cjq32wqna7w6q" path="res://Art/MainMenu/Button (Start).png" id="9_xj0d0"]
[ext_resource type="Texture2D" uid="uid://rbtvfyxo7ym5" path="res://Art/UI/arrow_x_wired.png" id="9_yfgbc"]
[ext_resource type="PackedScene" uid="uid://vccsfulplcjr" path="res://Scene/3F/Computer.tscn" id="16_3eytn"]

[sub_resource type="Animation" id="Animation_3qqw3"]
resource_name = "FadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UImanager/FadeInOut/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_qtynu"]
resource_name = "FadeInOut"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UImanager/FadeInOut/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_7adou"]
resource_name = "FadeOut"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UImanager/FadeInOut/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xeleb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UImanager/FadeInOut/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hvddq"]
resource_name = "Short"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UImanager/FadeInOut/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0usy1"]
resource_name = "Teleport"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UImanager/FadeInOut/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xm5qd"]
_data = {
"FadeIn": SubResource("Animation_3qqw3"),
"FadeInOut": SubResource("Animation_qtynu"),
"FadeOut": SubResource("Animation_7adou"),
"RESET": SubResource("Animation_xeleb"),
"Short": SubResource("Animation_hvddq"),
"Teleport": SubResource("Animation_0usy1")
}

[node name="UImanager" type="Node"]
script = ExtResource("1_ugyiy")

[node name="Inventory" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_j2p56")
itemData = ExtResource("3_81cup")

[node name="GridContainer" type="GridContainer" parent="Inventory"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -210.0
offset_top = 40.0
offset_right = 210.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_constants/h_separation = 140
columns = 4

[node name="Slot" type="Panel" parent="Inventory/GridContainer"]
layout_mode = 2
script = ExtResource("4_ct14i")

[node name="TouchScreenButton" type="TouchScreenButton" parent="Inventory/GridContainer/Slot"]
texture_normal = ExtResource("5_7ihpo")

[node name="Sprite2D" type="Sprite2D" parent="Inventory/GridContainer/Slot"]
offset = Vector2(66, 64)

[node name="Slot2" type="Panel" parent="Inventory/GridContainer"]
layout_mode = 2
script = ExtResource("4_ct14i")

[node name="TouchScreenButton" type="TouchScreenButton" parent="Inventory/GridContainer/Slot2"]
texture_normal = ExtResource("5_7ihpo")

[node name="Sprite2D" type="Sprite2D" parent="Inventory/GridContainer/Slot2"]
offset = Vector2(66, 64)

[node name="Slot3" type="Panel" parent="Inventory/GridContainer"]
layout_mode = 2
script = ExtResource("4_ct14i")

[node name="TouchScreenButton" type="TouchScreenButton" parent="Inventory/GridContainer/Slot3"]
texture_normal = ExtResource("5_7ihpo")

[node name="Sprite2D" type="Sprite2D" parent="Inventory/GridContainer/Slot3"]
offset = Vector2(66, 64)

[node name="Slot4" type="Panel" parent="Inventory/GridContainer"]
layout_mode = 2
script = ExtResource("4_ct14i")

[node name="TouchScreenButton" type="TouchScreenButton" parent="Inventory/GridContainer/Slot4"]
position = Vector2(6, -2)
texture_normal = ExtResource("5_7ihpo")

[node name="Sprite2D" type="Sprite2D" parent="Inventory/GridContainer/Slot4"]
offset = Vector2(66, 64)

[node name="Notice" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="Notice"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -75.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Notice/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -36.5
offset_right = 95.0
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "F 누르기"

[node name="MobileController" type="CanvasLayer" parent="."]
visible = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="MobileController"]
position = Vector2(40, 800)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("6_w3rwr")
texture_pressed = ExtResource("7_8e58o")
action = "move_left"

[node name="TouchScreenButton2" type="TouchScreenButton" parent="MobileController"]
position = Vector2(1688, 800)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("6_w3rwr")
texture_pressed = ExtResource("7_8e58o")
action = "move_right"

[node name="TouchScreenButton3" type="TouchScreenButton" parent="MobileController"]
position = Vector2(1713, 602)
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("7_b1cg2")
texture_pressed = ExtResource("9_s8fn7")
action = "interaction"

[node name="ExitButton" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("7_lh5y0")

[node name="TouchScreenButton" type="TouchScreenButton" parent="ExitButton"]
position = Vector2(1831, 20)
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("9_qm21b")
texture_pressed = ExtResource("9_yfgbc")

[node name="Panel" type="Panel" parent="ExitButton"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2

[node name="TouchScreenButton" type="TouchScreenButton" parent="ExitButton/Panel"]
position = Vector2(227, 65)
texture_normal = ExtResource("9_xj0d0")

[node name="TouchScreenButton2" type="TouchScreenButton" parent="ExitButton/Panel"]
position = Vector2(227, 259)
texture_normal = ExtResource("8_4wkpy")

[node name="FadeInOut" type="CanvasLayer" parent="."]
script = ExtResource("6_l6rhs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeInOut"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_xm5qd")
}

[node name="ColorRect" type="ColorRect" parent="FadeInOut"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="Computer" type="CanvasLayer" parent="."]
visible = false

[node name="Computer" parent="Computer" instance=ExtResource("16_3eytn")]

[node name="LightControl" type="CanvasModulate" parent="."]
visible = false
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Inventory/GridContainer/Slot/TouchScreenButton" to="Inventory/GridContainer/Slot" method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="Inventory/GridContainer/Slot2/TouchScreenButton" to="Inventory/GridContainer/Slot2" method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="Inventory/GridContainer/Slot3/TouchScreenButton" to="Inventory/GridContainer/Slot3" method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="Inventory/GridContainer/Slot4/TouchScreenButton" to="Inventory/GridContainer/Slot4" method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="ExitButton/TouchScreenButton" to="ExitButton" method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="ExitButton/Panel/TouchScreenButton" to="ExitButton" method="_on_touch_screen_button_2_pressed"]
[connection signal="pressed" from="ExitButton/Panel/TouchScreenButton2" to="ExitButton" method="ExitButton"]
